--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ a:hover {
 }
 .btn-blue.btn-small {
   background-position: -16px 0;
-  height: 40px;
+  height: 39px;
   line-height: 34px;
   font-size: 11px;
 }
@@ -393,7 +393,9 @@ a:hover {
   padding: 10px 40px 24px;
   width: 415px;
   border-radius: 8px;
-  background: #e7e1d5 url("../img/form");
+  background: #e7e1d5 url("../img/form-2.png");
+  -webkit-background-size: 100% 100%;
+  background-size: 100% 100%;
 }
 .form-2 h3 {
   line-height: 1;
@@ -488,9 +490,9 @@ h2 {
 }
 .wave-white-top:before {
   content: '';
-  background: url("../img/wave-white.png") center top;
+  background: url("../img/wave-white.png") center -1px;
   display: block;
-  height: 15px;
+  height: 14px;
 }
 .wave-white-bottom {
   position: relative;
@@ -529,7 +531,6 @@ h2 {
   box-sizing: border-box;
   padding: 1px 0;
   position: relative;
-  margin: 15px 0 16px;
   color: white;
 }
 .b-blue-wave:before {
@@ -588,9 +589,21 @@ h2 {
   color: #6e6e6e;
 }
 .b-simple {
-  background: #aa6b38;
+  background: #aa6b38 url("../img/b-simple.jpg") center top;
   color: white;
-  height: 482px;
+  height: 478px;
+  position: relative;
+}
+.b-simple:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  background: url("../img/b-simple-bottom.png") no-repeat bottom center;
+  height: 16px;
+  top: 100%;
+  left: 50%;
+  margin-left: -1000px;
+  width: 2000px;
 }
 .b-simple h2 {
   margin-top: 150px;
@@ -632,4 +645,9 @@ footer[role="contentinfo"] .site-logo {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
   font-size: 26px;
+  position: relative;
+}
+footer[role="contentinfo"] .site-logo img {
+  left: 0;
+  position: absolute;
 }
