--- a/css/style.less
+++ b/css/style.less
@@ -263,7 +263,7 @@ a {
   }
   &.btn-small {
     background-position: -16px 0;
-    height: 40px;
+    height: 39px;
     line-height: 34px;
     font-size: 11px;
     &:before {
@@ -439,7 +439,9 @@ a {
   padding: 10px 40px 24px;
   width: 415px;
   border-radius: 8px;
-  background: #e7e1d5 url("../img/form");
+  background: #e7e1d5 url("../img/form-2.png");
+  -webkit-background-size: 100% 100%;
+  background-size: 100% 100%;
   h3 {
     line-height: 1;
     margin: 24px 0;
@@ -541,9 +543,9 @@ h2 {
   position: relative;
   &:before {
     content: '';
-    background: url("../img/wave-white.png") center top;
+    background: url("../img/wave-white.png") center -1px;
     display: block;
-    height: 15px;
+    height: 14px;
   }
 }
 .wave-white-bottom {
@@ -590,7 +592,7 @@ h2 {
   box-sizing: border-box;
   padding: 1px 0;
   position: relative;
-  margin: 15px 0 16px;
+  //margin: 15px 0 16px;
   color: white;
   &:before {
     content: "";
@@ -652,9 +654,21 @@ h2 {
 }
 
 .b-simple {
-  background: #aa6b38;
+  background: #aa6b38 url("../img/b-simple.jpg") center top;
   color: white;
-  height: 482px;
+  height: 478px;
+  position: relative;
+  &:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    background: url("../img/b-simple-bottom.png") no-repeat bottom center;
+    height: 16px;
+    top: 100%;
+    left: 50%;
+    margin-left: -1000px;
+    width: 2000px;
+  }
   h2 {
     margin-top: 150px;
     text-align: center;
@@ -692,7 +706,6 @@ footer[role="contentinfo"] {
     bottom: 100%;
   }
   .site-contacts {
-    //font-size: 40px;
   }
   .site-logo {
     padding-left: 130px;
@@ -700,5 +713,10 @@ footer[role="contentinfo"] {
     font-family: @ptsans;
     font-weight: bold;
     font-size: 26px;
+    position: relative;
+    img {
+      left: 0;
+      position: absolute;
+    }
   }
 }
